@@ -16,6 +16,11 @@ Version 0.11
 
 - Added Nasm lexer.
 
+- Updated markdown processor to Markdown 1.7.
+
+- Support roman/sans/mono style defs and use them in the LaTeX
+  formatter.
+
 
 Version 0.10
 ------------
